--- a/config/locales/views/loans/nl.yml
+++ b/config/locales/views/loans/nl.yml
@@ -7,7 +7,7 @@ nl:
       interest_rate: Rentepercentage
       interest_rate_placeholder: '5.25'
       initial_balance: Oorspronkelijke leningbalans
-      rate_type: Rente type
+      rate_type: Rentetype
       term_months: Looptijd (maanden)
       term_months_placeholder: '360'
     new:
@@ -16,8 +16,8 @@ nl:
       interest_rate: Rentepercentage
       monthly_payment: Maandelijkse betaling
       not_applicable: N.v.t.
-      original_principal: Oorspronkelijk hoofdsom
-      remaining_principal: Resterend hoofdsom
+      original_principal: Oorspronkelijke hoofdsom
+      remaining_principal: Resterende hoofdsom
       term: Looptijd
       type: Type
       unknown: Onbekend
