--- a/config/locales/views/settings/api_keys/nl.yml
+++ b/config/locales/views/settings/api_keys/nl.yml
@@ -2,9 +2,9 @@
 nl:
   settings:
     api_keys_controller:
-      success: "Uw API key is succesvol aangemaakt"
-      revoked_successfully: "API key is succesvol ingetrokken"
-      revoke_failed: "Intrekken van API key mislukt"
+      success: "Uw API Key is succesvol aangemaakt"
+      revoked_successfully: "API Key is succesvol ingetrokken"
+      revoke_failed: "Intrekken van API Key mislukt"
       scope_descriptions:
         read_accounts: "Accounts bekijken"
         read_transactions: "Transacties bekijken"
@@ -16,17 +16,17 @@ nl:
         no_api_key:
           title: "API Key"
           heading: "Toegang tot uw accountgegevens via programma's"
-          description: "Krijg programmatische toegang tot uw Sure gegevens met een beveiligde API key."
+          description: "Krijg programmatische toegang tot uw Sure gegevens met een beveiligde API Key."
           what_you_can_do: "Wat u kunt doen met de API:"
           feature_1: "Programmatisch toegang tot uw accountgegevens"
           feature_2: "Aangepaste integraties en applicaties bouwen"
           feature_3: "Gegevensopvraging en -analyse automatiseren"
           security_note_title: "Beveiliging eerst"
-          security_note: "Uw API key heeft beperkte rechten op basis van de scopes die u selecteert. U kunt slechts één actieve API key tegelijk hebben."
+          security_note: "Uw API Key heeft beperkte rechten op basis van de scopes die u selecteert. U kunt slechts één actieve API Key tegelijk hebben."
           create_api_key: "API Key aanmaken"
         current_api_key:
           title: "Uw API Key"
-          description: "Uw actieve API key is klaar voor gebruik. Bewaar deze veilig en deel deze nooit publiekelijk."
+          description: "Uw actieve API Key is klaar voor gebruik. Bewaar deze veilig en deel deze nooit publiekelijk."
           active: "Actief"
           key_name: "Naam"
           created_at: "Aangemaakt"
@@ -36,41 +36,41 @@ nl:
           never_used: "Nooit gebruikt"
           never_expires: "Verloopt nooit"
           permissions: "Rechten"
-          usage_instructions_title: "Hoe uw API key te gebruiken"
-          usage_instructions: "Voeg uw API key toe in de X-Api-Key header bij het maken van verzoeken naar de Maybe API:"
+          usage_instructions_title: "Hoe uw API Key te gebruiken"
+          usage_instructions: "Voeg uw API Key toe in de X-Api-Key header bij het maken van verzoeken naar de Maybe API:"
           regenerate_key: "Nieuwe key aanmaken"
           revoke_key: "Key intrekken"
-          revoke_confirmation: "Weet u zeker dat u deze API key wilt intrekken? Deze actie kan niet ongedaan worden gemaakt en zal alle applicaties die deze key gebruiken onmiddellijk uitschakelen."
+          revoke_confirmation: "Weet u zeker dat u deze API Key wilt intrekken? Deze actie kan niet ongedaan worden gemaakt en zal alle applicaties die deze key gebruiken onmiddellijk uitschakelen."
       new:
         title: "API Key aanmaken"
         create_new_key: "Nieuwe API Key aanmaken"
-        description: "Configureer uw nieuwe API key met een beschrijvende naam en passende rechten."
+        description: "Configureer uw nieuwe API Key met een beschrijvende naam en passende rechten."
         name_label: "API Key naam"
         name_placeholder: "bijv. Productie App, Analytics Dashboard"
         name_help: "Kies een beschrijvende naam om het doel van deze key te identificeren."
         permissions_label: "Rechten"
-        permissions_help: "Selecteer de rechten die uw API key nodig heeft. U kunt altijd een nieuwe key aanmaken met andere rechten."
+        permissions_help: "Selecteer de rechten die uw API Key nodig heeft. U kunt altijd een nieuwe key aanmaken met andere rechten."
         scope_details:
           read_accounts: "Accountinformatie, saldo's en accountgegevens bekijken"
           read_transactions: "Transactiegegevens, categorieën en transactiedetails bekijken"
           read_balances: "Historische saldogegevens en accountwaardetrends bekijken"
           write_transactions: "Transactierecords aanmaken en bijwerken (binnenkort beschikbaar)"
         security_warning_title: "Belangrijke beveiligingsmelding"
-        security_warning: "Uw API key wordt slechts één keer getoond na aanmaak. Bewaar deze veilig en deel deze nooit publiekelijk. Als u deze verliest, moet u een nieuwe aanmaken."
+        security_warning: "Uw API Key wordt slechts één keer getoond na aanmaak. Bewaar deze veilig en deel deze nooit publiekelijk. Als u deze verliest, moet u een nieuwe aanmaken."
         create_key: "API Key aanmaken"
         cancel: "Annuleren"
       created:
         title: "API Key aangemaakt"
         success_title: "API Key succesvol aangemaakt"
-        success_description: "Uw nieuwe API key is klaar voor gebruik. Kopieer deze nu, want u zult deze niet opnieuw kunnen zien."
+        success_description: "Uw nieuwe API Key is klaar voor gebruik. Kopieer deze nu, want u zult deze niet opnieuw kunnen zien."
         your_api_key: "Uw API Key"
         key_name: "Naam"
         permissions: "Rechten"
         critical_warning_title: "⚠️ Kritiek: Bewaar uw API Key nu"
-        critical_warning_1: "Dit is de enige keer dat u uw API key in platte tekst ziet."
+        critical_warning_1: "Dit is de enige keer dat u uw API Key in platte tekst ziet."
         critical_warning_2: "Kopieer en bewaar deze veilig in uw wachtwoordbeheerder of applicatie."
         critical_warning_3: "Als u deze key verliest, moet u een nieuwe aanmaken."
         usage_instructions_title: "Snelstart"
-        usage_instructions: "Gebruik uw API key door deze toe te voegen in de X-Api-Key header:"
+        usage_instructions: "Gebruik uw API Key door deze toe te voegen in de X-Api-Key header:"
         copy_key: "API Key kopiëren"
         continue: "Doorgaan naar API Key instellingen"
