--- a/config/locales/models/coinstats_item/nl.yml
+++ b/config/locales/models/coinstats_item/nl.yml
@@ -5,6 +5,8 @@ nl:
       syncer:
         importing_wallets: Importeren van wallets van CoinStats...
         checking_configuration: Walletconfiguratie controleren...
-        wallets_need_setup: "%{count} wallets moeten worden ingesteld..."
+        wallets_need_setup:
+          one: "%{count} wallet moet worden ingesteld..."
+          other: "%{count} wallets moeten worden ingesteld..."
         processing_holdings: Bezig met verwerken van holdings...
         calculating_balances: Saldi berekenen...
