--- a/config/locales/views/password_resets/nl.yml
+++ b/config/locales/views/password_resets/nl.yml
@@ -1,7 +1,7 @@
 ---
 nl:
   password_resets:
-    disabled: Wachtwoord opnieuw instellen via Sure is uitgeschakeld. Stel uw wachtwoord opnieuw in via uw identiteitsprovider.
+    disabled: Wachtwoord opnieuw instellen via %{product_name} is uitgeschakeld. Stel uw wachtwoord opnieuw in via uw identiteitsprovider.
     sso_only_user: Uw account gebruikt SSO voor authenticatie. Neem contact op met uw beheerder om uw inloggegevens te beheren.
     edit:
       title: Wachtwoord opnieuw instellen
