--- a/config/locales/views/cryptos/en.yml
+++ b/config/locales/views/cryptos/en.yml
@@ -3,5 +3,18 @@ en:
   cryptos:
     edit:
       edit: Edit %{account}
+    form:
+      subtype_label: Account type
+      subtype_prompt: Select type...
+      subtype_none: Not specified
+      tax_treatment_label: Tax treatment
+      tax_treatment_hint: Most crypto is taxable unless held in a tax-advantaged account like a self-directed IRA.
     new:
       title: Enter account balance
+    subtypes:
+      wallet:
+        short: Wallet
+        long: Crypto Wallet
+      exchange:
+        short: Exchange
+        long: Crypto Exchange
