Localize Coinbase-related UI strings, refine account linking for security, and add timeouts to Coinbase API requests.

--- a/config/locales/views/settings/en.yml
+++ b/config/locales/views/settings/en.yml
@@ -140,6 +140,8 @@ en:
       choose_label: (optional)
       change: Change photo
     providers:
+      show:
+        coinbase_title: Coinbase
       coinbase_panel:
         setup_instructions: "To connect Coinbase:"
         step1_html: Go to <a href="https://www.coinbase.com/settings/api" target="_blank" class="text-primary underline">Coinbase API Settings</a>
