Add tests for Coinbase integration: account, item, and controller coverage
- Adds unit tests for `CoinbaseAccount` and `CoinbaseItem` models.
- Adds integration tests for `CoinbaseItemsController`.
- Introduces Stimulus `select-all` controller for UI checkbox handling.
- Localizes UI strings and logging for Coinbase integration.

--- a/config/locales/views/coinbase_items/en.yml
+++ b/config/locales/views/coinbase_items/en.yml
@@ -2,6 +2,7 @@
 en:
   coinbase_items:
     create:
+      default_name: Coinbase
       success: Successfully connected to Coinbase! Your accounts are being synced.
     update:
       success: Successfully updated Coinbase configuration.
