--- a/config/locales/views/loans/en.yml
+++ b/config/locales/views/loans/en.yml
@@ -19,7 +19,7 @@ en:
         cost_help: Amount you pay each payment period
         total_term_label: Total Term
         total_term_help: Total number of payments in the plan
-        current_term_label: Current Payment Number
+        current_term_label: Current Term
         current_term_help: Which payment you're currently on (0 if not started)
         payment_period_label: Payment Period
         payment_period_help: How often you make payments
