--- a/config/locales/models/provider_warnings/de.yml
+++ b/config/locales/models/provider_warnings/de.yml
@@ -1,4 +1,4 @@
 ---
 de:
   provider_warnings:
-    limited_investment_data: "Investment data from this provider is limited. Activity labels (Buy, Sell, Dividend) are not available, which may affect budget accuracy. Consider creating rules to exclude or categorize investment transactions."
+    limited_investment_data: "Die Investitionsdaten dieses Anbieters sind begrenzt. Aktivitätskennzeichnungen (Kauf, Verkauf, Dividende) sind nicht verfügbar, was die Budgetgenauigkeit beeinträchtigen kann. Erwägen Sie, Regeln zu erstellen, um Investitionstransaktionen auszuschließen oder zu kategorisieren."
