--- a/config/locales/models/provider_warnings/pt-BR.yml
+++ b/config/locales/models/provider_warnings/pt-BR.yml
@@ -1,4 +1,4 @@
 ---
 pt-BR:
   provider_warnings:
-    limited_investment_data: "Investment data from this provider is limited. Activity labels (Buy, Sell, Dividend) are not available, which may affect budget accuracy. Consider creating rules to exclude or categorize investment transactions."
+    limited_investment_data: "Os dados de investimento deste provedor são limitados. Rótulos de atividade (Compra, Venda, Dividendo) não estão disponíveis, o que pode afetar a precisão do orçamento. Considere criar regras para excluir ou categorizar transações de investimento."
