Localize Stripe payments message

--- a/config/locales/views/subscriptions/en.yml
+++ b/config/locales/views/subscriptions/en.yml
@@ -1,3 +1,5 @@
 en:
   subscriptions:
     self_hosted_alert: "%{product_name} is not available in self-hosted mode."
+    upgrade:
+      redirect_to_stripe: "In the next step, you'll be redirected to Stripe which handles credit cards for us."
