--- a/config/locales/views/subscriptions/es.yml
+++ b/config/locales/views/subscriptions/es.yml
@@ -2,3 +2,5 @@
 es:
   subscriptions:
     self_hosted_alert: "%{product_name} no está disponible en modo autoalojado."
+    upgrade:
+      redirect_to_stripe: "En el siguiente paso, serás redirigido a Stripe, que gestiona las tarjetas de crédito por nosotros."
