--- a/config/locales/views/subscriptions/fr.yml
+++ b/config/locales/views/subscriptions/fr.yml
@@ -1,3 +1,5 @@
 fr:
   subscriptions:
     self_hosted_alert: "%{product_name} n'est pas disponible en mode auto-hébergé."
+    upgrade:
+      redirect_to_stripe: "Dans l'étape suivante, vous serez redirigé vers Stripe, qui gère les cartes de crédit pour nous."
