--- a/config/locales/views/subscriptions/ro.yml
+++ b/config/locales/views/subscriptions/ro.yml
@@ -2,3 +2,5 @@
 ro:
   subscriptions:
     self_hosted_alert: "%{product_name} nu este disponibil în modul self-hosted."
+    upgrade:
+      redirect_to_stripe: "În pasul următor, veți fi redirecționat către Stripe, care procesează cardurile de credit pentru noi."
