--- a/config/locales/views/subscriptions/zh-CN.yml
+++ b/config/locales/views/subscriptions/zh-CN.yml
@@ -2,3 +2,5 @@
 zh-CN:
   subscriptions:
     self_hosted_alert: "%{product_name} 在自托管模式下不可用。"
+    upgrade:
+      redirect_to_stripe: "在下一步中，您将被重定向到 Stripe，它为我们处理信用卡。"
