--- a/config/locales/views/subscriptions/ca.yml
+++ b/config/locales/views/subscriptions/ca.yml
@@ -2,3 +2,5 @@
 ca:
   subscriptions:
     self_hosted_alert: "%{product_name} no està disponible en mode autoallotjat."
+    upgrade:
+      redirect_to_stripe: "En el proper pas, se us redirigirà a Stripe, que gestiona les targetes de crèdit per nosaltres."
