--- a/config/locales/views/subscriptions/nl.yml
+++ b/config/locales/views/subscriptions/nl.yml
@@ -1,3 +1,5 @@
 nl:
   subscriptions:
     self_hosted_alert: "%{product_name} is niet beschikbaar in zelfgehoste modus."
+    upgrade:
+      redirect_to_stripe: "In de volgende stap wordt u doorgestuurd naar Stripe, dat creditcards voor ons verwerkt."
