--- a/config/locales/views/settings/es.yml
+++ b/config/locales/views/settings/es.yml
@@ -1,5 +1,9 @@
 ---
 es:
+  views:
+    settings:
+      payments:
+        renewal: "Tu contribución continúa el %{date}."
   settings:
     ai_prompts:
       show:
