--- a/config/locales/views/settings/fr.yml
+++ b/config/locales/views/settings/fr.yml
@@ -1,5 +1,9 @@
 ---
 fr:
+  views:
+    settings:
+      payments:
+        renewal: "Votre contribution se poursuit le %{date}."
   settings:
     ai_prompts:
       show:
