--- a/config/locales/views/settings/ro.yml
+++ b/config/locales/views/settings/ro.yml
@@ -1,5 +1,9 @@
 ---
 ro:
+  views:
+    settings:
+      payments:
+        renewal: "Contribuția ta continuă pe %{date}."
   settings:
     ai_prompts:
       show:
