--- a/config/locales/views/settings/zh-CN.yml
+++ b/config/locales/views/settings/zh-CN.yml
@@ -1,5 +1,9 @@
 ---
 zh-CN:
+  views:
+    settings:
+      payments:
+        renewal: "您的贡献将在 %{date} 继续。"
   settings:
     ai_prompts:
       show:
