--- a/config/locales/views/layout/es.yml
+++ b/config/locales/views/layout/es.yml
@@ -18,6 +18,6 @@ es:
         privacy_policy: Política de privacidad
         terms_of_service: Términos de servicio
     trial:
-      open_demo: Prueba Sure
+      open_demo: Demo pública
       data_deleted_in_days: Los datos se eliminarán en %{days} días
       contribute: Contribuir
