--- a/config/locales/views/subscriptions/de.yml
+++ b/config/locales/views/subscriptions/de.yml
@@ -3,4 +3,5 @@ de:
   subscriptions:
     self_hosted_alert: "%{product_name} ist im Self-Hosting-Modus nicht verfügbar."
     upgrade:
+      contribute_and_support_sure: "Beitragen und Sure unterstützen"
       redirect_to_stripe: "Im nächsten Schritt werden Sie zu Stripe weitergeleitet, das Kreditkarten für uns verwaltet."
