--- a/config/locales/views/subscriptions/fr.yml
+++ b/config/locales/views/subscriptions/fr.yml
@@ -2,4 +2,5 @@ fr:
   subscriptions:
     self_hosted_alert: "%{product_name} n'est pas disponible en mode auto-hébergé."
     upgrade:
+      contribute_and_support_sure: "Contribuer et soutenir Sure"
       redirect_to_stripe: "Dans l'étape suivante, vous serez redirigé vers Stripe, qui gère les cartes de crédit pour nous."
